fix spacing for exp ul

--- a/src/styles.css
+++ b/src/styles.css
@@ -363,7 +363,8 @@ p {
 #experience h3 {
   font-size: 1.8rem;
   font-weight: bold;
-  color: #1a1a1a;
+  color: #333333;
+  margin-top: 5px;
 }
 
 #experience p {
@@ -371,8 +372,12 @@ p {
   color: #1a1a1a;
 }
 
-#experience .job h3 {
-  color: #333333;
+#experience ul li {
+  margin-bottom: 10px;
+}
+
+#experience p {
+  max-width: 1400px;
 }
 
 /* Projects */
